# dlx

./: .travis.yml  CMakeLists.txt  Cell.hpp  Element.cpp  Element.hpp  Header.cpp  Header.hpp  Matrix.cpp  Matrix.hpp  Pentominoes.cpp  Pentominoes.hpp  Piece.hpp  Puzzle.cpp  Puzzle.hpp  Pyramid.hpp  Queens.cpp  Queens.hpp  README.md  Soma.cpp  Soma.hpp  main.cpp  polyos.cpp  polyos.hpp  psolve.cpp
common/: CMakeLists.txt  Element.hpp  Matrix.cpp  Puzzle.hpp
queens/: CMakeLists.txt  Queens.cpp  Queens.hpp
sudoku/: CMakeLists.txt  Sudoku.cpp  Sudoku.hpp
tiling/: CMakeLists.txt  Pyramid.cpp  Soma.cpp
